feat(audit): add logging to LocationService (create, update, delete)