@@ -1,8 +1,6 @@
 package com.nick.job_application_tracker.service;
 
 import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 
@@ -14,35 +12,47 @@ import com.nick.job_application_tracker.repository.LocationRepository;
 @Service
 public class LocationService {
 
-    private final LocationRepository locationRepository;
+    private final LocationRepository repo;
+    private final LocationMapper mapper;
+    private final AuditLogService auditLogService;
 
-    public LocationService(LocationRepository locationRepository) {
-        this.locationRepository = locationRepository;
+    public LocationService(LocationRepository repo, LocationMapper mapper, AuditLogService auditLogService) {
+        this.repo = repo;
+        this.mapper = mapper;
+        this.auditLogService = auditLogService;
     }
 
-    public List<LocationDTO> getAllLocations() {
-        return locationRepository.findAll().stream()
-                .map(LocationMapper::toDTO)
-                .collect(Collectors.toList());
+    public List<LocationDTO> findAll() {
+        return repo.findAll().stream()
+            .map(mapper::toDTO)
+            .toList();
     }
 
-    public Optional<LocationDTO> getLocationById(Long id) {
-        return locationRepository.findById(id).map(LocationMapper::toDTO);
+    public LocationDTO createLocation(LocationDTO dto) {
+        Location location = mapper.toEntity(dto);
+        Location saved = repo.save(location);
+
+        auditLogService.logCreate("Created location: " + saved.getCity() + ", " + saved.getCountry());
+        return mapper.toDTO(saved);
     }
 
-    public LocationDTO createLocation(LocationDTO locationDTO) {
-        Location location = LocationMapper.toEntity(locationDTO);
-        return LocationMapper.toDTO(locationRepository.save(location));
-    }
+    public LocationDTO updateLocation(Long id, LocationDTO dto) {
+        Location existing = repo.findById(id)
+            .orElseThrow(() -> new IllegalArgumentException("Location not found with id: " + id));
 
-    public Optional<LocationDTO> updateLocation(Long id, LocationDTO locationDTO) {
-        return locationRepository.findById(id).map(existing -> {
-            LocationMapper.updateEntity(existing, locationDTO);
-            return LocationMapper.toDTO(locationRepository.save(existing));
-        });
+        existing.setCity(dto.getCity());
+        existing.setCountry(dto.getCountry());
+        Location updated = repo.save(existing);
+
+        auditLogService.logUpdate("Updated location ID: " + id);
+        return mapper.toDTO(updated);
     }
 
     public void deleteLocation(Long id) {
-        locationRepository.deleteById(id);
+        Location existing = repo.findById(id)
+            .orElseThrow(() -> new IllegalArgumentException("Location not found with id: " + id));
+
+        repo.delete(existing);
+        auditLogService.logDelete("Deleted location ID: " + id);
     }
 }
